--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -16,6 +16,20 @@
 
 \addbibresource{ref/ref.bib}
 
+\publishers{
+	\begin{tabular}{rl} %jedes C für eine spalte c für centered
+
+		Erstprüfer: & Prof. Dr. Christian Pfitzner
+		Betreuer:   & Prof. Dr. Christian Pfitzner
+		Ausgabedatum: & 23.03.2023
+		Abgabedatum: & 31.05.2023
+
+	\end{tabular}
+}
+
+
+
+
 \begin{document}
 	\pagestyle{scrheadings} 
 	%%%%%%%%% KOPFZEILE %%%%%%%%%%%%%%%%%%%%%
