--- a/kapitel/drohnen.tex
+++ b/kapitel/drohnen.tex
@@ -1,4 +1,4 @@
-In der Landwirtschaft geht es häufig darum, Sachen (Flüssigkeiten,Samen,etc.) auf dem Feld auszubringen. Auf die herkömmliche Art macht das ein Bauer, mithilfe eines Traktors. Je nach Aufgabe und Feldgröße benötigt ein Landwirt hierfür mehrere kostbare Stunden. Die Ausbringung von Flüssigkeiten wäre ein typischer Anwendungsfall für eine Drohne.\\
+In der Landwirtschaft geht es häufig darum, Sachen (Flüssigkeiten,Samen,etc.) auf dem Feld auszubringen. Auf die herkömmliche Art macht das ein Bauer, mithilfe eines Traktors. Je nach Aufgabe und Feldgröße benötigt ein Landwirt hierfür mehrere kostbare Stunden. Die Ausbringung von Flüssigkeiten wäre ein typischer Anwendungsfall für eine Drohne.
 
 \begin{figure}[ht]
 	\centering
