--- a/kapitel/bodenfeuchtigkeitssensor.tex
+++ b/kapitel/bodenfeuchtigkeitssensor.tex
@@ -3,11 +3,11 @@
 		\begin{description}
 			\item {Temperatursensoren:}
 			\begin{itemize}
-				\item {\textit{kapazitive Sensoren}}\\
+				\item {\textit{kapazitive Sensoren}}
 				ÄNDERUNG DER DIELEKTRIZITÄTSKONSTANTE
 				
 				\cite{induuxwiki2022}
-				\item {\textit{Leitfähigkeitssensoren}}\\
+				\item {\textit{Leitfähigkeitssensoren}}
 				Wie die meisten bereits wissen, leitet Wasser Strom. Natürlich lässt sich somit über die Leitfähigkeit der Gehalt an Wasser im Boden feststellen.\\
 				Das heißt, man leitet sich wie bei Thermistoren und RTDs die Größe über den Widerstand her. Das ist auch der Grund, weshalb es viele Sensoren gibt, die Feuchtigkeit und Temperatur gleichzeitig ermitteln können.
 			\end{itemize}
