--- a/kapitel/temperatursensor.tex
+++ b/kapitel/temperatursensor.tex
@@ -1,5 +1,5 @@
-Wichtig für das Wachstum von Pflanzen ist natürlich die Temperatur. Je nach Herkunft benötigen Pflanzen unterschiedliche Temperaturen.\\
-Um die das Absterben von Pflanzen durch falsche Temperaturen zu verhindern, benötigen Roboter zur Überprüfung Temperatursensoren.\\
+Wichtig für das Wachstum von Pflanzen ist natürlich die Temperatur. Je nach Herkunft benötigen Pflanzen unterschiedliche Temperaturen.
+Um die das Absterben von Pflanzen durch falsche Temperaturen zu verhindern, benötigen Roboter zur Überprüfung Temperatursensoren.
 Es gibt verschiedene Arten von Temperatursensoren:
 
 \begin{description}
