--- a/kapitel/roboterfahrzeuge.tex
+++ b/kapitel/roboterfahrzeuge.tex
@@ -1,4 +1,4 @@
-Ein weiteres weit verbreitetes Konzept sind Roboterfahrzeuge mit Reifen- oder Rollenantrieb. Diese werden hauptsächlich bei niedrig wachsenden Sorten zur Erkennung von Schädlingen oder beschädigten Pflanzen genutzt. Dies geschieht durch hochauflösende Kamerasysteme und der Verarbeitung der Ergebnisse, zum Teil mithilfe von künstlicher Intelligenz.\\
+Ein weiteres weit verbreitetes Konzept sind Roboterfahrzeuge mit Reifen- oder Rollenantrieb. Diese werden hauptsächlich bei niedrig wachsenden Sorten zur Erkennung von Schädlingen oder beschädigten Pflanzen genutzt. Dies geschieht durch hochauflösende Kamerasysteme und der Verarbeitung der Ergebnisse, zum Teil mithilfe von künstlicher Intelligenz.
 
 \begin{figure}[h]
 	\centering
