--- a/kapitel/schienensysteme.tex
+++ b/kapitel/schienensysteme.tex
@@ -1,7 +1,7 @@
 Unter Landwirtschaft zählen jedoch nicht nur klassische wie Äcker, Maisfelder, Getreidefelder, sondern unter anderem auch Gewächshäuser. Auch in Gewächshäusern gibt es viele Aufgaben, welche durch Sensoren ersetzt, bzw. sogar verbessert werden können.
 Hier gibt es bereits ein bekanntes Beispiel aus der Heimbeet-Szene:\\
 
-\begin{figure}[h]
+\begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{bilder/farmbot.png}
 	\caption[Farmbot]{Farmbot}
