--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -33,7 +33,7 @@
 \begin{document}
 	\pagestyle{scrheadings} 
 	%%%%%%%%% KOPFZEILE %%%%%%%%%%%%%%%%%%%%%
-	\ohead{\includegraphics[height=45pt]{bilder/thi.png.png}}
+	\ohead{}
 
 	%%%%%%%%% KOPF %%%%%%%%%%%%%%%%%%%%%%%%%%
 	\title{Seminararbeit}
