--- a/kapitel/einleitung.tex
+++ b/kapitel/einleitung.tex
@@ -1,3 +1,5 @@
-	In den vergangenen Jahrzehnten entwickelte sich durch das steigende Bevölkerungswachstum ein weltweiter Mangel an Ressourcen, vor allem an Nahrungsmitteln. Die Folge hiervon sind Massentierhaltung, Monokulturen und Gewächshausplantagen. Der Trend geht zur Perfektion der Erträge, bei möglichst geringem Aufwand.\\
-	In anderen Bereichen, wie der Automobilindustrie ist die Frage nach schnellen, zuverlässigen Massenproduktionen bereits seit mehreren Jahrzehnten diskutiert. Vorallem die Automobilindustrie hat bereits früh begonnen sich mit Automatisierung zu beschäftigen. Erste Ansätze gab es hier bereits 1913 durch Henry Ford, welcher die ersten Autos auf dem Fließband zusammenbauen ließ. Dieses System wurde über die Jahrzehnte soweit ausgebaut, dass heutzutage bereits viele Industrieroboter die Bandarbeit nahezu komplett autonom erledigen.\\
-	Auch in der Landwirtschaft gibt es bereits Ansätze, um die Arbeit zu industrialisieren.
+	In den vergangenen Jahrzehnten entwickelte sich durch das steigende Bevölkerungswachstum ein weltweiter Mangel an Ressourcen, vor allem an Nahrungsmitteln.\\!!!!!!QUELLE FINDEN - AM BESTEN GRAFIK!!!!!!\\ Die Folge hiervon sind Massentierhaltung, Monokulturen und Gewächshausplantagen. Der Trend geht zur Perfektion der Erträge, bei möglichst geringem Aufwand.
+	\\Auch in anderen Bereichen ist die Frage nach schnellen, zuverlässigen Massenproduktionen bereits seit mehreren Jahrzehnten diskutiert.
+	\\Vorallem die Automobilindustrie hat bereits früh begonnen sich mit Automatisierung zu beschäftigen. Erste Ansätze gab es hier bereits 1913 durch Henry Ford, welcher die ersten Autos auf dem Fließband zusammenbauen ließ. Dieses System wurde über die Jahrzehnte soweit ausgebaut, dass heutzutage bereits viele Industrieroboter die Bandarbeit nahezu komplett autonom erledigen.
+	\\Jedoch gibt es auch in der Landwirtschaft bereits Ansätze, um die Arbeit zu industrialisieren.
+	\\In der folgenden Arbeit werden die fundamentalen Grundlagen für eine effiziente Nutzung von sensorbasierten Robotersystemen erläutert. Dabei wird auf bereits existierende Systeme aufgezeigt, die benötigte Sensorik erläutert, sowie auf gesellschaftliche und technische Herausforderungen eingegangen.
