--- a/kapitel/schienensysteme.tex
+++ b/kapitel/schienensysteme.tex
@@ -1,4 +1,9 @@
-Unter Landwirtschaft zählen jedoch nicht nur klassische wie Äcker, Maisfelder, Getreidefelder, sondern unter anderem auch Gewächshäuser. Auch in Gewächshäusern gibt es viele Aufgaben, welche durch Sensoren ersetzt, bzw. sogar verbessert werden können.
+Unter Landwirtschaft zählen jedoch nicht nur klassische wie Äcker, Maisfelder, Getreidefelder, sondern unter anderem auch Gewächshäuser.
+Auch in Gewächshäusern gibt es viele Aufgaben, welche durch Sensoren ersetzt, bzw. sogar verbessert werden können.
+Der große Vorteil in Gewächshäusern ist die statische Umgebung.
+Gemeint ist hiermit die festen Punkte, an welchen die Pflanzen wachsen. 
+Dies ermöglicht dem Robotersystem eine ähnliche Arbeitsumgebung wie in einem Warenhaus in welchem die Systeme bestimmte Positionen und Höhen anzufahren.
+Durch diese festen Bewegungspunkte ergibt sich die Möglichkeit eines Schienensystems, welches bereits in den vorher erwähnten Warenhäusern seinen Einsatz findet.
 Hier gibt es bereits ein bekanntes Beispiel aus der Heimbeet-Szene:\\
 
 \begin{figure}[ht]
@@ -8,6 +13,8 @@ Hier gibt es bereits ein bekanntes Beispiel aus der Heimbeet-Szene:\\
 	\label{fig:farmbot}
 \end{figure}
 
-Der Farmbot ist ein Schienensystem, was von der Mechanik stark an einen 3D-Drucker erinnert. Verkauft wird hierbei von dem Unternehmen nur die Hardware, sprich Schienen, Motoren, Adapter, Verkabelung und ein Raspberry Pi für die Software.\\
+Der Farmbot ist ein Schienensystem, was von der Mechanik stark an einen 3D-Drucker erinnert.
+Verkauft wird hierbei von dem Unternehmen nur die Hardware, sprich Schienen, Motoren, Adapter, Verkabelung und ein Raspberry Pi für die Software.\\
 Die Software ist open-source, also frei im Internet für alle zugänglich, was mehrere Vorteile mit sich bringt:\\
-Die Software wird von jedem User gedownloaded und eventuell umgeschrieben. Das bedeutet die Software wird kontinuierlich Probe gelesen. Außerdem können User die Software verändern und anpassen, etwaige Fehler beheben oder Performance-Verbesserungen vornehmen.
+Die Software wird von jedem User gedownloaded und eventuell umgeschrieben. Das bedeutet die Software wird kontinuierlich Probe gelesen.
+Außerdem können User die Software verändern und anpassen, etwaige Fehler beheben oder Performance-Verbesserungen vornehmen.
