--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -69,8 +69,8 @@
 		\cite{oriolplanas2021}
 		\section{Bodenfeuchtigkeitssensor}
 		\input{kapitel/bodenfeuchtigkeitssensor.tex}
-		\section{Mineralsensor}
-		\input{kapitel/mineralsensor}
+		\section{Nahinfrarotspektroskopie}
+		\input{kapitel/nahinfrarotspektroskopie.tex}
 	
 	%%%%%%%%%%% ANWENDUNGEN %%%%%%%%%%%%%%%%%
 	\chapter{Anwendungen in der Landwirtschaft}
