--- a/kapitel/bewaesserung.tex
+++ b/kapitel/bewaesserung.tex
@@ -1,21 +1,32 @@
 Eine weitere Anwendung, welche in der Landwirtschaft in Kombination mit
-Sensorik viel Einsatz findet ist Bewässerung. Bewässerung kann auf
-unterschiedliche Arten realisiert werden. Man unterscheidet zwischen
-Flächenbewässerung und punktueller Bewässerung. Flächenbewässerung wird meist
-mit Sprenklern realisiert die mittig aufgestellt werden und so die Pflanzten
-von oben mit Wasser versorgen. Vorallem in sehr heißen Gebieten ist das recht
-ineffizient, da ein Großteil des Wassers auf der Pflanze verdunstet, bevor es
-aufgenommen werden kann. Ein sehr viel besseres System für die
-Freiflächenanwendung sind Schläuche, welche in Bodennähe verlegt werden. Mit
-vereinzelten Löchern wird durch den Schlauch Wasser abgegeben, welches direkt
-vom Boden aufgenommen werden kann und unter dem Pflanzen, geschützt vor der
-Sonne, nicht verdunstet. Der Nachteil an Schläuchen im Freien ist die
-Anfälligkeit gegenüber Zerstörung durch Tiere, besonders Marder neigen dazu,
-Schläuche aufzubeißen, womit eine Verluststelle im System besteht, die nur
-schwer bemerkt und lokalisiert werden kann. Einen weiteren Aspekt, den es zu
-beachten gilt, wenn Felder in freier Umgebung bewässert werden sollen, ist die
-dauerhafte Überwachung der Bodenfeuchtigkeit. Wenn es regnet, neigt ein
-bewässertes System schnell zur Überwässerung. Durch Bodenfeuchtigkeitssensoren
-(Kapitel 4.2) kann mithilfe eines Mikrokontrollers ein Feuchtigkeitsthreshold
-eingestellt werden, welcher sicherstellt, dass die Pflanzen genau die richtige
-Menge an Wasser bekommen.
+Sensorik viel Einsatz findet ist Bewässerung. Vorallem durch das immer weniger
+werdende Grundwasser, sind Pflanzen auf eine externe Bewässerung angewiesen.
+\cite{liu2018self} Bewässerung kann auf unterschiedliche Arten realisiert
+werden. Man unterscheidet zwischen Flächenbewässerung und punktueller
+Bewässerung. Flächenbewässerung wird meist mit Sprenklern realisiert die mittig
+aufgestellt werden und so die Pflanzten von oben mit Wasser versorgen. Vorallem
+in sehr heißen Gebieten ist das recht ineffizient, da ein Großteil des Wassers
+auf der Pflanze verdunstet, bevor es aufgenommen werden kann. Ein sehr viel
+besseres System für die Freiflächenanwendung sind Schläuche, welche in
+Bodennähe verlegt werden. Mit vereinzelten Löchern wird durch den Schlauch
+Wasser abgegeben, welches direkt vom Boden aufgenommen werden kann und unter
+dem Pflanzen, geschützt vor der Sonne, nicht verdunstet. Der Nachteil an
+Schläuchen im Freien ist die Anfälligkeit gegenüber Zerstörung durch Tiere,
+besonders Marder neigen dazu, Schläuche aufzubeißen, womit eine Verluststelle
+im System besteht, die nur schwer bemerkt und lokalisiert werden kann. Einen
+weiteren Aspekt, den es zu beachten gilt, wenn Felder in freier Umgebung
+bewässert werden sollen, ist die dauerhafte Überwachung der Bodenfeuchtigkeit.
+Wenn es regnet, neigt ein bewässertes System schnell zur Überwässerung. Durch
+Bodenfeuchtigkeitssensoren (Kapitel 4.2) kann mithilfe eines Mikrokontrollers
+ein Feuchtigkeitsthreshold eingestellt werden, welcher sicherstellt, dass die
+Pflanzen genau die richtige Menge an Wasser bekommen. Außerdem gibt es Ansätze,
+zur passiven Versorgung mit Wasser, wobei man versucht, das Optimum aus
+Niederschlag und Grundwasser zu nutzen. Ein Beispiel hierfür beschäftigt sich
+mit der Idee ein T-Stück im Boden einzusetzen. Der obere Teil des T-Stücks soll
+das schnelle versickern des Niederschlags verhindern, womit die Pflanzen mehr
+Zeit haben diesen mithilfe der Wurzeln zu verwenden. Der untere Teil des Teils
+reicht bis zum Grundwasser. Wie bereits vorher erwähnt, ist der
+Grundwasserspiegel inzwischen zu niedrig, um von den Pflanzen erreicht zu
+werden. Mithilfe von kleinen Röhren wird die Kapillarkraft verwendet, um
+Grundwasser von unten, nach oben zu den Pflanzen zu transportieren, wobei das
+vollkommen autonom und ohne jegliche Ansteuerung funktioniert. \cite{liu2018self}
