--- a/kapitel/temperatursensor.tex
+++ b/kapitel/temperatursensor.tex
@@ -1,16 +1,17 @@
-Wichtig für das Wachstum von Pflanzen ist natürlich die Temperatur. Je nach Herkunft benötigen Pflanzen unterschiedliche Temperaturen.
-Um die das Absterben von Pflanzen durch falsche Temperaturen zu verhindern, benötigen Roboter zur Überprüfung Temperatursensoren.
-Es gibt verschiedene Arten von Temperatursensoren:
+Wichtig für das Wachstum von Pflanzen ist natürlich die Temperatur. Je nach
+Herkunft benötigen Pflanzen unterschiedliche Temperaturen. Um die das Absterben
+von Pflanzen durch falsche Temperaturen zu verhindern, benötigen Roboter zur
+Überprüfung Temperatursensoren. Es gibt verschiedene Arten von
+Temperatursensoren:
 
 \begin{description}
 	\item {Temperatursensoren:}
-	\begin{itemize}
-		\item {\textit{IR}}
-		
-		\item {\textit{Thermistoren}}\\
-		Thermistoren sind Bauteile, welche ihren Widerstand bei steigender Temperatur verringern. Sie bestehen aus Keramik oder Polymeren und die Temperatur wird hierbei sehr genau und schnell ausgegeben.
-		\item {\textit{Widerstandsdetektoren}}\\
-		Widerstandsdetektoren (RTDs) funktionieren wie Thermistoren, bestehen aber aus Metall, wie Kupfer, Nickel oder Platin. Sie sind genauer, aber auch teurer als Thermistoren. Da Pflanzen durchaus mit Temperaturschwankungen klar kommen, und nicht eine, auf 1/10°C genauere Temperatur benötigen, reichen für die Landwirtschaft Thermistoren aus.
-	\end{itemize}
+	      \begin{itemize}
+		      \item {\textit{IR}}\\
+					\input{kapitel/infrarot.tex}
+		      \item {\textit{Thermistoren}}\\
+		            \input{kapitel/thermistoren.tex}
+		      \item {\textit{Thermoelemente}}\\
+		            Widerstandsdetektoren (RTDs) funktionieren wie Thermistoren, bestehen aber aus Metall, wie Kupfer, Nickel oder Platin. Sie sind genauer, aber auch teurer als Thermistoren. Da Pflanzen durchaus mit Temperaturschwankungen klar kommen, und nicht eine, auf 1/10°C genauere Temperatur benötigen, reichen für die Landwirtschaft Thermistoren aus.
+	      \end{itemize}
 \end{description}
-
