--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -41,3 +41,41 @@
 	url="https://wiki.induux.de/Kapazitive_Feuchtemessung",
 	urldate="2023-03-30"
 }
+
+@article{liu2018self,
+  title={Self-watering system for arid area: a method to combat desertification},
+  author={Liu, Qiang and Yasufuku, Noriyuki and Omine, Kiyoshi},
+  journal={Soils and foundations},
+  volume={58},
+  number={4},
+  pages={838--852},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{shenk2001application,
+  title={Application of NIR spectroscopy to agricultural products},
+  author={Shenk, John S and Workman, Jerme J and Westerhaus, Mark O},
+  journal={Practical Spectroscopy Series},
+  volume={27},
+  pages={419--474},
+  year={2001}
+}
+
+@article{cen2007theory,
+  title={Theory and application of near infrared reflectance spectroscopy in determination of food quality},
+  author={Cen, Haiyan and He, Yong},
+  journal={Trends in Food Science \& Technology},
+  volume={18},
+  number={2},
+  pages={72--83},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@book{schuster2004infrarotthermographie,
+  title={Infrarotthermographie},
+  author={Schuster, Norbert and Kolobrodov, Valentin G},
+  year={2004},
+  publisher={John Wiley \& Sons}
+}
