--- a/kapitel/temperatursensor.tex
+++ b/kapitel/temperatursensor.tex
@@ -12,6 +12,6 @@ Temperatursensoren:
 		      \item {\textit{Thermistoren}}\\
 		            \input{kapitel/thermistoren.tex}
 		      \item {\textit{Thermoelemente}}\\
-		            Widerstandsdetektoren (RTDs) funktionieren wie Thermistoren, bestehen aber aus Metall, wie Kupfer, Nickel oder Platin. Sie sind genauer, aber auch teurer als Thermistoren. Da Pflanzen durchaus mit Temperaturschwankungen klar kommen, und nicht eine, auf 1/10°C genauere Temperatur benötigen, reichen für die Landwirtschaft Thermistoren aus.
+		            \input{kapitel/thermoelemente.tex}
 	      \end{itemize}
 \end{description}
