--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -79,3 +79,12 @@
   year={2004},
   publisher={John Wiley \& Sons}
 }
+
+@article{bernhard2014thermoelemente,
+  title={Thermoelemente},
+  author={Bernhard, Frank},
+  journal={Handbuch der Technischen Temperaturmessung},
+  pages={831--1047},
+  year={2014},
+  publisher={Springer}
+}
