--- a/kapitel/roboterfahrzeuge.tex
+++ b/kapitel/roboterfahrzeuge.tex
@@ -1,4 +1,8 @@
-Ein weiteres weit verbreitetes Konzept sind Roboterfahrzeuge mit Reifen- oder Rollenantrieb. Diese werden hauptsächlich bei niedrig wachsenden Sorten zur Erkennung von Schädlingen oder beschädigten Pflanzen genutzt. Dies geschieht durch hochauflösende Kamerasysteme und der Verarbeitung der Ergebnisse, zum Teil mithilfe von künstlicher Intelligenz.
+Ein weiteres weit verbreitetes Konzept sind Roboterfahrzeuge mit Reifen- oder
+Rollenantrieb. Diese werden hauptsächlich bei niedrig wachsenden Sorten zur
+Erkennung von Schädlingen oder beschädigten Pflanzen genutzt. Dies geschieht
+durch hochauflösende Kamerasysteme und der Verarbeitung der Ergebnisse, zum
+Teil mithilfe von künstlicher Intelligenz.
 
 \begin{figure}[h]
 	\centering
@@ -7,5 +11,9 @@ Ein weiteres weit verbreitetes Konzept sind Roboterfahrzeuge mit Reifen- oder Ro
 	\label{fig:farmdroid_fd20}
 \end{figure}
 
-Der Farmdroid FD20 arbeitet hierbei komplett autonom und klimaneutral durch Solarpanels. Laut eines Zeitungsartikels ist dieser der weltweit erste, vollautonome Agrarroboter der Welt. \cite{donaukurier2022}\\
-Die Aufgabe dieses Roboters ist die Saat und die Unkrautvernichtung. Laut Hersteller hat sich der Farmdroid bereits nach bis zu 1,5 Jahren ammotisiert und arbeitet ab diesem Zeitpunkt aufgrund der Solarpanels mit extrem niedrigen Unterhaltskosten.
+Der Farmdroid FD20 arbeitet hierbei komplett autonom und klimaneutral durch
+Solarpanels. Laut eines Zeitungsartikels ist dieser der weltweit erste,
+vollautonome Agrarroboter der Welt.\cite{donaukurier2022}\\ Die Aufgabe dieses
+Roboters ist die Saat und die Unkrautvernichtung. Laut Hersteller hat sich der
+Farmdroid bereits nach bis zu 1,5 Jahren ammotisiert und arbeitet ab diesem
+Zeitpunkt aufgrund der Solarpanels mit extrem niedrigen Unterhaltskosten.
