--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -27,7 +27,7 @@
 		Erstprüfer: & Prof. Dr. Christian Pfitzner \\
 		Betreuer:   & Prof. Dr. Christian Pfitzner \\
 		Ausgabedatum: & 23.03.2023 \\
-		Abgabedatum: & 31.05.2023 \\
+		Abgabedatum: & 20.06.2023 \\
 
 	\end{tabular}
 }
@@ -85,8 +85,8 @@
 		\section{Schädlingsbekämpfung}
 		\input{kapitel/schaedlingsbekaempfung}
 	%%%%%%%%%%%% HERAUSFORDERUNGEN %%%%%%%%%%
-	\chapter{Herausforderungen}
-	\input{kapitel/herausforderungen.tex}
+	\chapter{Künstliche Intelligenz}
+	\input{kapitel/künstliche Intelligenz.tex}
 	%%%%%%%%%%% FAZIT %%%%%%%%%%%%%%%%%%%%%%%
 	\chapter{Fazit}
 	\input{kapitel/fazit}
@@ -94,6 +94,5 @@
 	\printbibliography
 	%%%%%%%%%%% ABBILDUNGSVERZEICHNIS %%%%%%%
 	\listoffigures
-	test
 \end{document}
 %% im fließtext bei Zitat auf Autor beziehen %%
