--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -88,3 +88,21 @@
   year={2014},
   publisher={Springer}
 }
+@inproceedings{mci/Mohr2020,
+author = {Mohr, Svenja AND Kühl, Rainer},
+title = {Künstliche Intelligenz in der Landwirtschaft},
+booktitle = {40. GIL-Jahrestagung, Digitalisierung für Mensch, Umwelt und Tier},
+year = {2020},
+editor = {Gandorfer, Markus AND Meyer-Aurich, Andreas AND Bernhardt, Heinz AND Maidl, Franz Xaver AND Fröhlich, Georg AND Floto, Helga} ,
+pages = { 193-198 },
+publisher = {Gesellschaft für Informatik e.V.},
+address = {Bonn}
+}
+@article{wennker2020kunstliche,
+  title={K{\"u}nstliche Intelligenz in der Landwirtschaft},
+  author={Wennker, Phil and Wennker, Phil},
+  journal={K{\"u}nstliche Intelligenz in der Praxis: Anwendung in Unternehmen und Branchen: KI wettbewerbs-und zukunftsorientiert einsetzen},
+  pages={141--149},
+  year={2020},
+  publisher={Springer}
+}
