--- a/kapitel/künstliche Intelligenz.tex
+++ b/kapitel/künstliche Intelligenz.tex
@@ -1,9 +1,27 @@
 Wie auch in allen Bereichen, ist auch in der Landwirtschaft gerade eine sehr
 starke Entwicklung von künstlicher Intelligenz zu erkennen. Künstliche
 Intelligenz wird dabei verwendet, um große Datenmengen von Sensoren in der
-Landwirtschaft zu nutzen, um neuronale Netzte zu trainieren. Meist findet KI
-ihren Einsatz im Bereich der Schädlingsbekämpfung oder im Ausbringen von Saat.
-\cite{mci/Mohr2020} Algorithmen zur künstlichen Intelligenz werden zum Beispiel
-verwendet, um den Lebenszyklus einer Pflanze zu überwachen. Kontrolliert werden
-kann dieser Prozess über viele verschiedene Arten, zum Beispiel Drohnen,
-Satelliten oder Ultraleichtflugzeugen. Ein gutes Beispiel hierfür ist das Start-up Taranis. \cite{wennker2020kunstliche}
+Landwirtschaft zu nutzen, um neuronale Netze zu trainieren. Meist findet KI
+ihren Einsatz im Bereich der Schädlingsbekämpfung oder im Ausbringen von
+Saat.\cite{mci/Mohr2020} Algorithmen zur künstlichen Intelligenz werden zum
+Beispiel verwendet, um den Lebenszyklus einer Pflanze zu überwachen.
+Kontrolliert werden kann dieser Prozess über viele verschiedene Arten, zum
+Beispiel Drohnen, Satelliten oder Ultraleichtflugzeugen. Ein gutes Beispiel
+hierfür ist das Start-up Taranis.Taranis benutzt Drohnen, welche mit bis zu
+200km/h extrem hochauflösende Aufnahmen von Feldern machen können. In
+Verbindung mithilfe von Satelliten und Flugzeugen überwachen sie so 80.000
+Quadratkilometer Agrarfläche in mehreren Ländern. Diese Pflanzen werden
+überwacht, und der Landwirt wird sofort informiert, sobald eine Pflanze
+beschädigt wird. Somit kann dieser die Pflanze im Frühstadium sofort entfernen
+und noch zur richtigen Zeit eine Neue anpflanzen. Zudem können die
+Drohnenbilder mithilfe der von Tensorflow unterstützen KI durch ihre hohe
+Auflösung sogar Insekten und andere Schädling erkennen, bevor die Pflanzen von
+diesen zerstört werden. Diese Technologie wird in Zukunft noch an Bedeutung
+zunehmen, da bereits jetzt 20-40 Prozent der Pflanzen durch Unkraut und
+ähnliches absterben. Zudem wird die Wettervorhersage immer mehr durch den
+Einsatz von künstlicher Intelligenz verbessert. Durch die Vielzahl an
+Satelliten steht eine extreme Menge an Wetterdaten zur Verfügung, die
+regelmäßig geupdated wird. Da die Ernte sehr anfällig gegenüber Gewitter,
+speziell Hagel ist, haben mehrere Projekte, wie zum Beispiel das US National
+Oceanic and Atmospheric Administration bereits begonnen, sich mit dem regionen-
+und zeitabhängigen Wetterprognosen zu befassen.\cite{wennker2020kunstliche}
