--- a/kapitel/fazit.tex
+++ b/kapitel/fazit.tex
@@ -1,1 +1,14 @@
-	Was gibt es für Möglichkeiten, wie man die Landwirtschaft entwickeln kann, *ohne* Arbeitsplätze zu gefährden? 
+Zusammenfassend kann man davon sprechen, dass auch die Landwirtschaft von dem
+Umschwung in die Automatisierung von Prozessen betroffen ist. Vorallem in
+dieser Branche gibt es viele gute Möglichkeiten, Systeme mithilfe von Sensoren
+zu überwachen und zu beeinflussen. Auch mit dem Hintergrund des
+Bevölkerungswachstums und der damit einhergehenden Steigerung des Mangel an
+Lebensmitteln ist es besonders wichtig, jede Chance zu nutzen, die
+Landwirtschaft so effizient wie möglich zu gestalten. Systeme wie der Farmbot
+helfen, jeden freien Platz sinnvoll zu nutzen und animieren die Menschen, auch
+Zuhause Pflanzen selbst zu züchten. Jedoch muss dies in einem für die Umwelt
+möglichst erträglichen Rahmen geschehen. Hierfür sind die Roboter eine große
+Hilfe, die zum Großteil, im Gegensatz zu den alten dieselbetriebenen
+Landmaschinen, durch elektrische Antriebe bewegt werden. Durch Solarmodule
+können diese immer weiter nahezu autark und emissionsfrei arbeiten, was eine
+hohe Entlastung für die Umwelt darstellt.
