--- a/kapitel/thermistoren.tex
+++ b/kapitel/thermistoren.tex
@@ -1,1 +1,7 @@
-Thermistoren sind Bauteile, welche ihren Widerstand bei steigender Temperatur verringern. Sie bestehen aus Keramik oder Polymeren und die Temperatur wird hierbei sehr genau und schnell ausgegeben.
+Thermistoren sind Bauteile, welche ihren Widerstand bei steigender Temperatur
+verringern. Sie bestehen aus Keramik oder Polymeren und die Temperatur wird
+hierbei sehr genau und schnell ausgegeben. Der Standardwiderstand bezieht sich
+bei Thermistoren immer auf 25°C. Man Unterscheidet zwischen NTC und PTC, wobei
+sich die Buchstaben hier auf das Verhalten des Widerstands bei Wärmeänderung
+beziehen. Bei einem NTC sinkt der Widerstand bei steigender Temperatur, bei
+einem PTC wird er höher. Meist werden NTC für Temperaturmessungen verwendet.\cite{hering2018temperaturmesstechnik}
