--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -106,3 +106,25 @@ address = {Bonn}
   year={2020},
   publisher={Springer}
 }
+@article{hering2018temperaturmesstechnik,
+  title={Temperaturmesstechnik},
+  author={Hering, Ekbert and Sch{\"o}nfelder, Gert},
+  journal={Sensoren in Wissenschaft und Technik: Funktionsweise und Einsatzgebiete},
+  pages={393--419},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{bvl,
+	title = "Genehmigung von Pflanzenschutzmitteln für die Anwendung mit Drohnen in Weinbau-Steillagen",
+	journal = "Bundesamt für Verbraucherschutz und Lebensmittelsicherheit",
+	year = "2021",
+	url="https://www.bvl.bund.de/SharedDocs/Fachmeldungen/04_pflanzenschutzmittel/2021/2021_05_26_Fa_Drohnen.html",
+	urldate="2023-06-11"
+}
+@article{clausing2020baumrinden,
+  title={Baumrinden-Monitoring der Pestizid-Belastung {\"u}ber die Luft: Eine toxikologische Bewertung},
+  author={Clausing, Peter},
+  year={2020},
+  publisher={B{\"u}ndnis f{\"u}r eine enkeltaugliche Landwirtschaft}
+}
