--- a/kapitel/bodenfeuchtigkeitssensor.tex
+++ b/kapitel/bodenfeuchtigkeitssensor.tex
@@ -1,13 +1,11 @@
 		Pflanzen brauchen Wasser. Je nach Sorte mehr oder weniger, nicht zu viel und nicht zu wenig. Um zu wissen, ob bewässert werden soll, benötigt der Roboter Bodenfeuchtigkeitssensoren.
 		
 		\begin{description}
-			\item {Temperatursensoren:}
+			\item {Feuchtigkeitssensoren:}
 			\begin{itemize}
-				\item {\textit{kapazitive Sensoren}}
-				ÄNDERUNG DER DIELEKTRIZITÄTSKONSTANTE
-				
-				\cite{induuxwiki2022}
-				\item {\textit{Leitfähigkeitssensoren}}
+				\item {\textit{kapazitive Sensoren}}\\
+				\input{kapitel/kapazitive Sensoren.tex}
+				\item {\textit{Leitfähigkeitssensoren}}\\
 				Wie die meisten bereits wissen, leitet Wasser Strom. Natürlich lässt sich somit über die Leitfähigkeit der Gehalt an Wasser im Boden feststellen.\\
 				Das heißt, man leitet sich wie bei Thermistoren und RTDs die Größe über den Widerstand her. Das ist auch der Grund, weshalb es viele Sensoren gibt, die Feuchtigkeit und Temperatur gleichzeitig ermitteln können.
 			\end{itemize}
